a Task is now only considered finished if all required questions have a non-null answer
The module finished page now shows when there are no unanswered questions, even if the module isn't "finished" under this new meaning.

The list of questions on the module finished page now shows a check or an ex, with an ex for required questions that have a null answer (i.e. the same set of questions that prevent a module from being finished).

fixes #77

--- a/modules/demo1_system_component_software.yaml
+++ b/modules/demo1_system_component_software.yaml
@@ -27,15 +27,19 @@ questions:
     type: text
     ask-first:
       - whats_a_component
+    required: true
 
   - id: requirement
     title: Functional Requirements
     prompt: What functional requirements does {{name}} fulfill?
     type: text
+    required: true
+
   - id: description
     title: Description
     prompt: Describe {{name}}.
     type: text
+
 output:
   - title: Your Answer
     format: markdown
