--- a/modules/demo1_project.yaml
+++ b/modules/demo1_project.yaml
@@ -1,5 +1,6 @@
-id: project
-title: Project Module
+id: demo1_project
+title: I want to make my system compliant.
+type: project
 short_description: The structure of a guidedmodules.Project.
 long_description: >
   This module provides the structure of a guidedmodules.Project.
