--- a/modules/demo2_project.yaml
+++ b/modules/demo2_project.yaml
@@ -1,7 +1,38 @@
 id: demo2_project
-title: I need to inventory all of the systems I manage.
+title: I need to add this project to the inventory of systems I manage.
 type: project
+version: 2
 introduction:
   format: markdown
   template: |
     This project will help you inventory all of the systems you manage.
+
+questions:
+  - id: q_project_details
+    title: Project Details
+    type: module
+    module-id: inventory_project_details
+    tab: Basic Info
+    group: About the Project
+
+  - id: q_project_user_types
+    title: User Types
+    type: module
+    module-id: demo1_project_user_types
+    tab: Description of Users
+    group: Identity, Credential and Access Management
+
+output:
+  - tab: Basic Info
+    format: markdown
+    template: |
+      # Basic Info
+
+      General information about {{project}}.
+
+  - tab: Description of Users
+    format: markdown
+    template: |
+      # Description of Users
+
+      Details about the users of {{project}} and access control.
