--- a/modules/demo2_analyze_site.yaml
+++ b/modules/demo2_analyze_site.yaml
@@ -1,9 +1,9 @@
-id: demo2_run_server_scan
-title: Run a Server Scan
+id: demo2_analyze_site
+title: Analyze Site
 introduction:
   format: markdown
   template: |
-    We will now run a scan for {{project}}.
+    We will now analyze {{project}}.
 
 questions:
   - prompt: What is the url of the project?
@@ -12,24 +12,26 @@ questions:
     type: url
     help: e.g., http://www.yoursite.gov
 
-  - id: scan_result
-    title: Scan Result
-    prompt: We will now gather some information.
+  - id: analysis
+    title: Analyze
+    prompt: We will analyze {{project_url}}.
     type: external-function
     function: guidedmodules.sample_external_functions.sample_function
     ask-first:
       - project_url
 
 output:
-  - title: Scan Result
+  - title: Analysis Result
     format: markdown
     template: |
-      Scanned Website: {{project_url}}
-
-      {% if not scan_result %}
-      Not yet scanned.
+      {% if not analysis %}
+      Not yet analyzed.
       {% else %}
-      Server: {{scan_result.server}}
+      URL: {{analysis.url}}
 
-      HTTPS with HSTS: {{scan_result.hsts}}
+      Date: {{analysis.scan_date}}
+
+      Server: {{analysis.server}}
+
+      HTTPS with HSTS: {{analysis.hsts}}
       {% endif %}
