Add org details Qs to inventory

--- a/modules/demo2_project.yaml
+++ b/modules/demo2_project.yaml
@@ -22,6 +22,13 @@ questions:
     tab: Description of Users
     group: Identity, Credential and Access Management
 
+  - id: q_org_details
+    title: Organization Details
+    type: module
+    module-id: inventory_org_details
+    tab: Basic Info
+    group: About the Project
+
 output:
   - tab: Basic Info
     format: markdown
