add a code to the result of the external function so that the template can detect if the data structure returned by the function is in sync with what the template has been coded against

--- a/modules/demo2_analyze_site.yaml
+++ b/modules/demo2_analyze_site.yaml
@@ -26,6 +26,10 @@ output:
     template: |
       {% if not analysis %}
       Not yet analyzed.
+
+      {% elif analysis.schema != 1 %}
+      Analysis results are out of date because a new analysis is available. Please re-scan.
+
       {% else %}
       URL: {{analysis.url}}
 
