realize if the project url has changed since the external function was run
This revealed that template comparison operators (like ==) were not working correctly with my RenderedAnswer class.

--- a/modules/demo2_analyze_site.yaml
+++ b/modules/demo2_analyze_site.yaml
@@ -27,6 +27,9 @@ output:
       {% if not analysis %}
       Not yet analyzed.
 
+      {% elif analysis.url != project_url %}
+      Analysis results are out of date because the project URL has changed. Please re-scan.
+
       {% elif analysis.schema != 1 %}
       Analysis results are out of date because a new analysis is available. Please re-scan.
 
