handle the case when the schema key isnt even set yet

--- a/modules/demo2_analyze_site.yaml
+++ b/modules/demo2_analyze_site.yaml
@@ -30,7 +30,7 @@ output:
       {% elif analysis.url != project_url %}
       Analysis results are out of date because the project URL has changed. Please re-scan.
 
-      {% elif analysis.schema != 1 %}
+      {% elif 'schema' not in analysis or analysis.schema != 1 %}
       Analysis results are out of date because a new analysis is available. Please re-scan.
 
       {% else %}
