--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ email_validator
 git+https://github.com/JoshData/commonmark-py-plaintext
 git+https://github.com/if-then-fund/django-html-emailer
 
+dj-database-url
+
 django==1.9
 django-allauth
 jsonfield
