--- a/manifest.yml
+++ b/manifest.yml
@@ -4,10 +4,6 @@ instances: 1
 applications:
 - name: govready-q
   services:
-     - cf-govready-q-mysql
+     - cf-govready-q-pgsql
   env:
-    DEBUG: true
-    HOST: "localhost:8000"
-    HTTPS: false
     SECRET-KEY: "@-uks6_6r$e6qp2*7irerq5%l2a8vbtxv#fd4nfjyd%(fz85x4"
-    STATIC: True
