Stopping with new errors for psycopg2

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,4 +6,8 @@ applications:
   services:
      - cf-govready-q-pgsql
   env:
-    SECRET-KEY: "@-uks6_6r$e6qp2*7irerq5%l2a8vbtxv#fd4nfjyd%(fz85x4"
+    SECRET_KEY: "@-uks6_6r$e6qp2*7irerq5%l2a8vbtxv#fd4nfjyd%(fz85x4"
+    STATIC: 'true'
+    HTTPS: False
+    DEBUG: True
+    HOST: "localhost:8000"
