Support secret_key maintenance

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,8 +6,7 @@ applications:
   services:
      - cf-govready-q-pgsql
   env:
-    SECRET_KEY: "@-uks6_6r$e6qp2*7irerq5%l2a8vbtxv#fd4nfjyd%(fz85x4"
     STATIC: 'true'
     HTTPS: False
-    DEBUG: False
+    DEBUG: False   # False for production
     HOST: "localhost:8000"
