--- a/circle.yml
+++ b/circle.yml
@@ -9,8 +9,6 @@ dependencies:
     - sudo dpkg -i cf-cli_amd64.deb
     - cf -v
 
-# maching build images (Ubuntu version) are set in Project Settings, not
-# in this configuration file.
 machine:
   python:
     version: 3.4.4
@@ -21,6 +19,11 @@ test:
   override:
     - python manage.py test
     - python -m unittest discover tests
+  post:
+    - cf api https://api.run.pivotal.io
+    - cf auth $PWS_USER $PWS_PASSWORD
+    - cf target -o $PWS_USER -s dev
+    - cf a
 
 deployment:
   development: # just a label; label names are completely up to you
