--- a/circle.yml
+++ b/circle.yml
@@ -29,4 +29,4 @@ deployment:
   development: # just a label; label names are completely up to you
     branch: cfdev
     commands:
-      - make -n run
+      - make run
