--- a/circle.yml
+++ b/circle.yml
@@ -31,4 +31,5 @@ deployment:
   development: # just a label; label names are completely up to you
     branch: cfdev
     commands:
+      - make requirements
       - make run
