--- a/manifest.yml
+++ b/manifest.yml
@@ -5,8 +5,7 @@ applications:
 - name: govready-q
   services:
      - cf-govready-q-pgsql # needs provisioning between deployments
-  host: dev-govready-q # this will change between deployments
-  domain: cfapps.io
+  domain: dev.pburkholder.com
   env:
     STATIC: 'true'
     HTTPS: False
