--- a/circle.yml
+++ b/circle.yml
@@ -21,15 +21,17 @@ test:
   override:
     - python manage.py test
     - python -m unittest discover tests
-  post:
-    - cf api https://api.run.pivotal.io
-    - cf auth $PWS_USER $PWS_PASSWORD
-    - cf target -o GovReadyPDB -s development
-    - cf a
 
+# Before deploying, set up
+# PWS_USER and PWS_PASSWORD as env vars in CircleCI
+# provision DATABASE_URL, if needed, and SECRET_KEY via local release
 deployment:
   development: # just a label; label names are completely up to you
     branch: cfdev
     commands:
+      - cf api https://api.run.pivotal.io
+      - cf auth $PWS_USER $PWS_PASSWORD
+      - cf target -o GovReady -s dev
+      - cf target # echo space to confirm ok
       - make requirements
-      - CFOPTS="-d dev.pburkholder.com" make run
+      - CFENV="dev" make run
