--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ test:
 # provision DATABASE_URL, if needed, and SECRET_KEY via local release
 deployment:
   development: # just a label; label names are completely up to you
-    branch: cfdev
+    branch: master
     commands:
       - cf api https://api.run.pivotal.io
       - cf auth $PWS_USER $PWS_PASS
