add *.govready.com to nginx.conf

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -27,6 +27,7 @@ server {
 	listen [::]:443 ssl http2;
 
 	server_name q.govready.com;
+	server_name *.govready.com;
 	root /home/site/public_html;
  
 	ssl_certificate /etc/ssl/local/ssl_certificate.crt;
