Add 'modules/dev' to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,10 @@ docs/_build/
 # PyBuilder
 target/
 
-#Ipython Notebook
+# Ipython Notebook
 .ipynb_checkpoints
+
+# Local development files
+modules/dev
+
 
