--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ machine:
 test:
   pre:
     - deployment/fetch-vendor-resources.sh
+    - pip install -r dev_requirements.txt
   override:
     - python manage.py test
     - python -m unittest discover tests
