Use 'System Catalog' language

--- a/modules/demo2_project.yaml
+++ b/modules/demo2_project.yaml
@@ -1,5 +1,5 @@
 id: demo2_project
-title: Simple system inventory
+title: "[Deprecated] Capture basic system profile"
 type: project
 version: 2
 introduction:
