allow module-type questions to be answered by any Task that that the user has read permission to within the organization
Previously the only options offered were Tasks within the same Project.

Simplified some of the UI and the code for module-type questions.

Allowed a module YAML file to reference a module by its full (absolute) ID, rather than just an ID relative to the current directory, by prefixing the module ID with a forward slash.

see #80

--- a/modules/organization.yaml
+++ b/modules/organization.yaml
@@ -19,3 +19,10 @@ questions:
     tab: Basic Info
     group: About the Project
 
+  - id: point_of_contacts
+    title: Points of Contact
+    type: module-set
+    module-id: point_of_contact
+    tab: Basic Info
+    group: Define Points of Contact
+
