add a simple file upload question type, see #146
To demonstrate, adding an upload-your-logo question to a new organization profile module.

This requires updating vendor resources as I've improved the ajax_with_indicator function from my bootstrap helpers scripts, as well as installing a new dependency on my database-backed Django storage backend (which comes from my open source if.then.fund work).

--- a/modules/organization.yaml
+++ b/modules/organization.yaml
@@ -12,12 +12,19 @@ introduction:
     Tell us about your organization.
 
 questions:
+  - id: organization_profile
+    title: Organization Profile
+    type: module
+    module-id: organization_profile
+    tab: Basic Info
+    group: About the Organization
+
   - id: organization_details
     title: Organization Details
     type: module
     module-id: organization_classification
     tab: Basic Info
-    group: About the Project
+    group: About the Organization
 
   - id: point_of_contacts
     title: Points of Contact
