Patch for env vars

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,10 @@ dependencies:
 machine:
   python:
     version: 3.4.4
+  # Add some environment variables
+  environment:
+    APPNAME: govready-q
+    AUTOPILOT: https://github.com/contraband/autopilot/releases/download/0.0.2/autopilot-linux
 
 test:
   pre:
@@ -30,13 +34,11 @@ deployment:
   development: # just a label; label names are completely up to you
     branch: master
     commands:
-      - export APPNAME=govready-q
-      - export AUTOPILOT=https://github.com/contraband/autopilot/releases/download/0.0.2/autopilot-linux
       - cf api https://api.run.pivotal.io
       - cf auth $PWS_USER $PWS_PASS
       - cf target -o GovReady -s dev
       - cf target # echo space to confirm ok
       - cf install-plugin -f $AUTOPILOT
-      - make requirements
+      - CFENV=dev make requirements
       - ./cf-blue-green.sh $APPNAME
       - cf logout
